--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,45 @@
-Flask
-Flask-Bootstrap
-Flask-Login
-Flask-Mail
-Flask-Migrate
-Flask-Script
-Flask-SQLAlchemy
-Flask-WTF
-idna
-itsdangerous
-gunicorn
-Jinja2
-Mako
-MarkupSafe
-passlib
-pycparser
-python-dateutil
-python-editor
-requests
-six
-SQLAlchemy
-urllib3
-visitor
-Werkzeug
-WTForms
-waitress
-python-dotenv
-matplotlib
-datetime
+alembic==1.13.1
+blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+contourpy==1.2.0
+cycler==0.12.1
+dominate==2.9.1
+Flask==3.0.2
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.6.3
+Flask-Mail==0.9.1
+Flask-Migrate==4.0.7
+Flask-Script==2.0.6
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+fonttools==4.50.0
+greenlet==3.0.3
+gunicorn==21.2.0
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+kiwisolver==1.4.5
+Mako==1.3.2
+MarkupSafe==2.1.5
+matplotlib==3.8.3
+numpy==1.26.4
+packaging==24.0
+passlib==1.7.4
+pillow==10.2.0
+pycparser==2.21
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-editor==1.0.4
+requests==2.31.0
+six==1.16.0
+SQLAlchemy==2.0.28
+typing_extensions==4.10.0
+urllib3==2.2.1
+visitor==0.1.3
+waitress==3.0.0
+Werkzeug==3.0.1
+WTForms==3.1.2
